<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lokasi Sekolah Islam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="title_activity_guide">Petunjuk</string>
    <string name="title_activity_about">Tentang</string>
    <string name="title_activity_menu_utama">Menu Utama</string>
    <string name="title_activity_location">Lokasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="tap">Tap to select school</string>
    <string name="mulai">Mulai</string>
    <string name="about">Tentang</string>
    <string name="guide">Petunjuk</string>
    <string name="judul">LOKASI SEKOLAH ISLAM</string>
    <string name="icon_time_circle">\uf057</string>
    <string name="icon_search">\uf002</string>
    <string name="sortir">sortir dengan nama instansi</string>

    <string-array name="menu">
        <item>Madrasah Aliyah</item>
        <item>Madrasah Diniyah Takmiliya</item>
        <item>Madrasah Ibtdaiyah</item>
        <item>Perguruan Tinggi Islam</item>
        <item>Pondok Pesantren</item>
        <item>Raudhatul Atfal</item>
    </string-array>

    <string name="title_activity_location_school">Map</string>
    <string name="about_title">LOKASI SEKOLAH ISLAM</string>
    <string name="about_app">aplikasi ini digunakan untuk mempermudah mencari lokasi sekolah islam di indonesia dengan menggunakan map agar dapat menuju lokasi yang dituju dari lokasi tempat berada</string>

    <string name="guide1">pada halaman utama \n
        tekan tombol search untuk menampilkan dialog search\.</string>
    <string name="guide2">sentuh tulisan Tap to select school untuk memilih tipe sekolah\.</string>
    <string name="guide3">ketik ok untuk melanjutkan mengambil data\.</string>
    <string name="guide4">pada alamat yang berada di bawah peta dapat di geser ke kanan dan ke kiri untuk data selanjutnya\.</string>
    <string name="guide5">pada list sebelah kiri dapat di sentuh untuk menampilkan data detil pada sebelah kanan\.</string>
    <string name="guide6">pada tanda panah map jika disentuh maka akan menampilkan nama institusi dan juga tombol untuk membuat rute dari lokasi user berada hingga ke sekolah tersebut\.</string>
</resources>
