<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="@dimen/margin"
              android:layout_gravity="center"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/icon_time_circle"
              android:id="@+id/cancel"
              android:textSize="@dimen/textExtraLarge"
              android:gravity="right"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/search"
              android:textColor="@color/green"
              android:gravity="center"
              android:textSize="@dimen/textLarge"
              android:layout_marginBottom="@dimen/marginMedium"
              android:id="@+id/title"/>
    <EditText android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="@dimen/textMedium"
             android:hint="@string/tap"
             android:layout_marginBottom="@dimen/marginButton"
             android:id="@+id/inputDialog"></EditText>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/button_search"
           style="@style/CustomButton"/>

</LinearLayout>