<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background"
              tools:context="com.andre.lokasisekolahislam.app.views.activity.About">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/green"
            android:id="@+id/toolAbout"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:text="@string/about"
                android:textColor="@color/click"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/textLarge"
                android:id="@+id/titleAboutBar"
                android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>
    <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/textExtraLarge"
            android:text="@string/about_title"
            android:textColor="@color/green"
            android:id="@+id/titleAbout"
            android:layout_marginBottom="@dimen/marginMedium"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:textSize="@dimen/textSmall"
              android:layout_marginTop="@dimen/marginMedium"
              android:padding="@dimen/margin"
              android:textColor="@color/click"
              android:text="@string/about_app"
              android:id="@+id/aboutApp"
              android:layout_height="wrap_content"/>
</LinearLayout>
