<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background"
              tools:context="com.andre.lokasisekolahislam.app.views.activity.Guide">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/green"
            android:id="@+id/toolGuide"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:text="@string/guide"
                android:textColor="@color/click"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/textLarge"
                android:id="@+id/titleGuideBar"
                android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:padding="@dimen/marginButton"
                      android:layout_height="match_parent">
            <TextView
                    android:text="@string/guide"
                    android:textSize="@dimen/textExtraLarge"
                    android:textColor="@color/green"
                    android:id="@+id/textGuideTitle"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin"
                    android:layout_marginBottom="@dimen/marginMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/guide1"
                    android:textSize="@dimen/textSmall"
                    android:textColor="@color/click"
                    android:layout_width="wrap_content"
                    android:id="@+id/textGuide1"
                    android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide1"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/guide2"
                    android:textSize="@dimen/textSmall"
                    android:textColor="@color/click"
                    android:id="@+id/textGuide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide2"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:padding="@dimen/margin"
                       android:src="@drawable/guide3"
                       android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/guide3"
                    android:textSize="@dimen/textSmall"
                    android:textColor="@color/click"
                    android:id="@+id/textGuide3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide4"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide5"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/guide4"
                    android:textSize="@dimen/textSmall"
                    android:textColor="@color/click"
                    android:id="@+id/textGuide4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/guide5"
                    android:textSize="@dimen/textSmall"
                    android:textColor="@color/click"
                    android:layout_marginTop="@dimen/marginButton"
                    android:id="@+id/textGuide5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/guide6"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textSmall"
                    android:id="@+id/textGuide6"
                    android:layout_marginTop="@dimen/marginMedium"
                    android:textColor="@color/click"
                    android:layout_height="wrap_content"/>

            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide6"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide7"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
            <ImageView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:src="@drawable/guide8"
                       android:padding="@dimen/margin"
                       android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
